// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WHEN export checkbox AND WHEN checkbox is false THEN chekbox set tot rue 1`] = `
Object {
  "data": Object {
    "created": Array [
      Object {
        "fields": Object {
          "Alpha": false,
          "DendronId": "alpha",
        },
        "id": "airtable-alpha",
      },
    ],
    "updated": Array [],
  },
  "error": null,
}
`;

exports[`WHEN export checkbox AND WHEN checkbox is true THEN chekbox set tot rue 1`] = `
Object {
  "data": Object {
    "created": Array [
      Object {
        "fields": Object {
          "Alpha": true,
          "DendronId": "alpha",
        },
        "id": "airtable-alpha",
      },
    ],
    "updated": Array [],
  },
  "error": null,
}
`;

exports[`WHEN export note with multi select AND GIVEN multiSelect is a tag  THEN tags are exported  1`] = `
Object {
  "data": Object {
    "created": Array [
      Object {
        "fields": Object {
          "DendronId": "alpha",
          "Tasks": Array [
            "role.foo",
            "role.bar",
          ],
        },
        "id": "airtable-alpha",
      },
    ],
    "updated": Array [],
  },
  "error": null,
}
`;

exports[`WHEN export note with multi select AND GIVEN multiSelect is regular fm field THEN fields are exported  1`] = `
Object {
  "data": Object {
    "created": Array [
      Object {
        "fields": Object {
          "DendronId": "alpha",
          "Tasks": Array [
            "one",
            "two",
          ],
        },
        "id": "airtable-alpha",
      },
    ],
    "updated": Array [],
  },
  "error": null,
}
`;

exports[`WHEN export note with singleSelect  AND GIVEN singleSelect is a tag  AND no matching tags for singleSelect THEN field is exported  1`] = `
Object {
  "data": Object {
    "created": Array [
      Object {
        "fields": Object {
          "DendronId": "alpha",
        },
        "id": "airtable-alpha",
      },
    ],
    "updated": Array [],
  },
  "error": null,
}
`;

exports[`WHEN export note with singleSelect  AND GIVEN singleSelect is a tag  AND single matching tags for singleSelect THEN field is exported  1`] = `
Object {
  "data": Object {
    "created": Array [
      Object {
        "fields": Object {
          "DendronId": "alpha",
          "Tasks": "action.baz",
        },
        "id": "airtable-alpha",
      },
    ],
    "updated": Array [],
  },
  "error": null,
}
`;

exports[`WHEN export note with singleSelect  AND GIVEN singleSelect is regular fm field AND WHEN value is empty THEN field is not exported 1`] = `
Object {
  "data": Object {
    "created": Array [
      Object {
        "fields": Object {
          "DendronId": "alpha",
        },
        "id": "airtable-alpha",
      },
    ],
    "updated": Array [],
  },
  "error": null,
}
`;

exports[`WHEN export note with singleSelect  AND GIVEN singleSelect is regular fm field AND WHEN value is filled THEN field is exported  1`] = `
Object {
  "data": Object {
    "created": Array [
      Object {
        "fields": Object {
          "DendronId": "alpha",
          "Tasks": "one",
        },
        "id": "airtable-alpha",
      },
    ],
    "updated": Array [],
  },
  "error": null,
}
`;

exports[`WHEN export number AND WHEN number is not required AND WHEN field is absent THEN do not export number 1`] = `
Object {
  "data": Object {
    "created": Array [
      Object {
        "fields": Object {
          "DendronId": "alpha",
        },
        "id": "airtable-alpha",
      },
    ],
    "updated": Array [],
  },
  "error": null,
}
`;

exports[`WHEN export number AND WHEN number is not required AND WHEN number is present THEN export number 1`] = `
Object {
  "data": Object {
    "created": Array [
      Object {
        "fields": Object {
          "Alpha": 1,
          "DendronId": "alpha",
        },
        "id": "airtable-alpha",
      },
    ],
    "updated": Array [],
  },
  "error": null,
}
`;

exports[`WHEN export number AND WHEN number is required AND WHEN field is absent THEN return error 1`] = `
Object {
  "data": Object {},
  "error": [Error: undefined is wrong type],
}
`;
